--- a/End_to_End_ML_Sepssis_Prediction.ipynb
+++ b/End_to_End_ML_Sepssis_Prediction.ipynb
@@ -6087,7 +6087,72 @@
    "id": "2ec579ce",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from fastapi import FastAPI\n",
+    "from pydantic import BaseModel\n",
+    "import pickle\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import uvicorn\n",
+    "import os\n",
+    "\n",
+    "# call the app\n",
+    "app = FastAPI(title=\"API\")\n",
+    "\n",
+    "# Endpoints\n",
+    "@app.get(\"/\")\n",
+    "def root():\n",
+    "    return {\"API\": \"This is an API for sepsis prediction.\"}\n",
+    "\n",
+    "\n",
+    "# Load the model and scaler\n",
+    "def load_model_and_scaler():\n",
+    "    with open(\"model.pkl\", \"rb\") as f1, open(\"scaler.pkl\", \"rb\") as f2:\n",
+    "        return pickle.load(f1), pickle.load(f2)\n",
+    "\n",
+    "model, scaler = load_model_and_scaler()\n",
+    "\n",
+    "def predict(df, endpoint=\"simple\"):\n",
+    "    # Scaling\n",
+    "    scaled_df = scaler.transform(df)\n",
+    "\n",
+    "    # Prediction\n",
+    "    prediction = model.predict_proba(scaled_df)\n",
+    "\n",
+    "    highest_proba = prediction.argmax(axis=1)\n",
+    "\n",
+    "    predicted_labels = [\"Patient doesn't have sepsis\" if i == 0 else \"Patient has sepsis\" for i in highest_proba]\n",
+    "    print(f\"Predicted labels: {predicted_labels}\")\n",
+    "\n",
+    "    response = []\n",
+    "    for label in predicted_labels:\n",
+    "        output = {\n",
+    "            \"predicted_label\": label\n",
+    "        }\n",
+    "        response.append(output)\n",
+    "\n",
+    "    return response\n",
+    "\n",
+    "\n",
+    "class Patient(BaseModel):\n",
+    "    Blood_Work_R1: int\n",
+    "    Blood_Pressure: int\n",
+    "    Blood_Work_R3: int\n",
+    "    BMI: float\n",
+    "    Blood_Work_R4: float\n",
+    "    Patient_age: int\n",
+    "\n",
+    "## Prediction endpoint\n",
+    "@app.post(\"/predict\")\n",
+    "def predict_sepsis(patient: Patient):\n",
+    "    # Make prediction\n",
+    "    data = pd.DataFrame(patient.dict(), index=[0])\n",
+    "    parsed = predict(df=data)\n",
+    "    return {\"output\": parsed}\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    uvicorn.run(\"main:app\", reload=True)"
+   ]
   }
  ],
  "metadata": {
