--- a/Sepssis_Prediction_MLnotebook.ipynb
+++ b/Sepssis_Prediction_MLnotebook.ipynb
@@ -64,6 +64,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 109,
+   "id": "4874b72a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: fastapi in c:\\users\\tikue.feleke\\downloads\\l6sepssisprediction\\venv\\lib\\site-packages (0.96.0)Note: you may need to restart the kernel to use updated packages.\n",
+      "\n",
+      "Requirement already satisfied: pydantic in c:\\users\\tikue.feleke\\downloads\\l6sepssisprediction\\venv\\lib\\site-packages (1.10.8)\n",
+      "Requirement already satisfied: uvicorn in c:\\users\\tikue.feleke\\downloads\\l6sepssisprediction\\venv\\lib\\site-packages (0.22.0)\n",
+      "Requirement already satisfied: starlette<0.28.0,>=0.27.0 in c:\\users\\tikue.feleke\\downloads\\l6sepssisprediction\\venv\\lib\\site-packages (from fastapi) (0.27.0)\n",
+      "Requirement already satisfied: typing-extensions>=4.2.0 in c:\\users\\tikue.feleke\\downloads\\l6sepssisprediction\\venv\\lib\\site-packages (from pydantic) (4.6.3)\n",
+      "Requirement already satisfied: click>=7.0 in c:\\users\\tikue.feleke\\downloads\\l6sepssisprediction\\venv\\lib\\site-packages (from uvicorn) (8.1.3)\n",
+      "Requirement already satisfied: h11>=0.8 in c:\\users\\tikue.feleke\\downloads\\l6sepssisprediction\\venv\\lib\\site-packages (from uvicorn) (0.14.0)\n",
+      "Requirement already satisfied: colorama in c:\\users\\tikue.feleke\\downloads\\l6sepssisprediction\\venv\\lib\\site-packages (from click>=7.0->uvicorn) (0.4.6)\n",
+      "Requirement already satisfied: anyio<5,>=3.4.0 in c:\\users\\tikue.feleke\\downloads\\l6sepssisprediction\\venv\\lib\\site-packages (from starlette<0.28.0,>=0.27.0->fastapi) (3.7.0)\n",
+      "Requirement already satisfied: idna>=2.8 in c:\\users\\tikue.feleke\\downloads\\l6sepssisprediction\\venv\\lib\\site-packages (from anyio<5,>=3.4.0->starlette<0.28.0,>=0.27.0->fastapi) (3.4)\n",
+      "Requirement already satisfied: sniffio>=1.1 in c:\\users\\tikue.feleke\\downloads\\l6sepssisprediction\\venv\\lib\\site-packages (from anyio<5,>=3.4.0->starlette<0.28.0,>=0.27.0->fastapi) (1.3.0)\n",
+      "Requirement already satisfied: exceptiongroup in c:\\users\\tikue.feleke\\downloads\\l6sepssisprediction\\venv\\lib\\site-packages (from anyio<5,>=3.4.0->starlette<0.28.0,>=0.27.0->fastapi) (1.1.1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install fastapi pydantic uvicorn\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "812a3ae4",
    "metadata": {},
@@ -4106,8 +4136,27 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "553c7569",
+   "id": "d1a4731f",
    "metadata": {},
+   "source": [
+    "Import the necessary libraries:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "314b786a",
+   "metadata": {},
+   "source": [
+    "Load the saved Random Forest model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4eb80429",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
